# local-whisper

./: .gitignore  CONTRIBUTING.md  README.md  REFACTOR.md  justfile  pyproject.toml  setup.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
.paul/: PROJECT.md  ROADMAP.md  STATE.md
.paul/phases/01-core-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/02-hotkey-clipboard/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/03-overlay/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/04-distribution/: 04-01-PLAN.md  04-01-SUMMARY.md
.paul/phases/05-snippets/: 05-01-PLAN.md  05-01-SUMMARY.md
.paul/phases/06-corrections/: 06-01-PLAN.md  06-01-SUMMARY.md
.paul/phases/08-auto-cleanup/: 08-01-PLAN.md  08-01-SUMMARY.md  CONTEXT.md
.paul/phases/09-auto-adapt/: 09-01-PLAN.md  09-01-SUMMARY.md
.paul/phases/10-model-selection/: 10-01-PLAN.md  10-01-SUMMARY.md
.paul/phases/11-backend-selection/: 11-01-PLAN.md  11-01-SUMMARY.md
.paul/phases/12-coreml-backend/: 12-01-PLAN.md  12-01-SUMMARY.md  RESEARCH.md
spikes/: sfspeech_spike.py
src/local_whisper/: __init__.py  __main__.py  _macos.py  app.py  audio.py  auto_adapt.py  auto_cleanup.py  benchmark.py  clipboard.py  command.py  config.py  corrections.py  hotkey.py  llm.py  overlay.py  snippets.py  transcribe.py
tests/: accuracy_script.txt  benchmark_compare.py  conftest.py  record_sample.py  sample.npy  test_app.py  test_audio.py  test_auto_adapt.py  test_auto_cleanup.py  test_clipboard.py  test_command.py  test_config.py  test_corrections.py  test_llm.py  test_main.py  test_snippets.py  test_transcribe.py
(+15 files in other folders)
