[project]
name = "local-whisper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "pyperclip>=1.8",
    "pynput>=1.7",
]

[project.scripts]
local-whisper = "local_whisper.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_whisper"]
