[project]
name = "local-whisper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "pyperclip>=1.8",
    "pynput>=1.7",
    "openai>=1.0",
]

[project.scripts]
local-whisper = "local_whisper.__main__:main"

[project.optional-dependencies]
parakeet = [
    "parakeet-mlx>=0.5.1",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4", "pre-commit>=3"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG"]
ignore = ["BLE001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_whisper"]
